--- a/styles.css
+++ b/styles.css
@@ -69,8 +69,11 @@
 .sizeliens {
     width: 100%;
 }
+.sizelien1_2 {
+    width: 60%;
+}
 .sizeliens {
-    width: 45%;
+    width: 100%;
 }
 .sizelien {
     width: 140px;
@@ -356,9 +359,6 @@ transform: scale(1.03);
     border-radius: 15px 15px 0 0 ;
 }
 .imgActivites6 {
-    background-image: url("images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 150px;
     border-radius: 15px 15px 0 0 ;
