mode response de footer

--- a/styles.css
+++ b/styles.css
@@ -334,49 +334,31 @@ transform: scale(1.03);
     width: 95%;
 }
 .imgActivites1 {
-    background-image: url("images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 530px;
     border-radius: 15px 15px 0 0 ;
 }
 .imgActivites2 {
-    background-image: url("images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 250px;
     border-radius: 15px 15px 0 0 ;
 }
 .imgActivites3 {
-    background-image: url("images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 150px;
     border-radius: 15px 15px 0 0 ;
 }
 .imgActivites4 {
-    background-image: url("images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 530px;
     border-radius: 15px 15px 0 0 ;
 }
 .imgActivites5 {
-    background-image: url("images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 250px;
     border-radius: 15px 15px 0 0 ;
 }
 .imgActivites6 {
-    background-image: url("images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg");
-    background-size: cover;
-    background-position: center;
     width: 100%;
     height: 150px;
     border-radius: 15px 15px 0 0 ;
@@ -385,6 +367,9 @@ transform: scale(1.03);
 .footer {
     height: 300px;
     margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .footerBlocTaille {
     height: 150px;
@@ -418,14 +403,13 @@ transform: scale(1.03);
         padding: 20px;
     }
     .tabletteSizeTitrePop {
-        margin-top: 0;
+        margin-top: 0%;
     }
 }
-@media screen and (max-width: 990px) {
-   
+@media screen and (max-width: 767px) {
     .mobileFiltreWrap {
-        flex-direction: column;
-        align-items: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
     }
     .filtreIconsTexte {
         margin-bottom: 20px;
@@ -437,7 +421,7 @@ transform: scale(1.03);
     .blocPopulaire {
         flex: none;
         width: 90%;
-        margin-left: 0;
+        margin-left: 0%;
         padding: 5%;
     }
     .blocHérbergements {
@@ -446,7 +430,18 @@ transform: scale(1.03);
         margin-right: 0;
         margin-top: 50px;
         padding: 5%;
+    } 
+    .footer {
+        height: 450px;
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
-    
-    
+    .margFootMobile {
+        margin-left: 5%;
+    }
 }
+
+   
+   
