--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@
     border: none;
 }
 .texteGras {
-    font-weight: bold;
+    font: weight 2rem;
 }
 .colorBleu {
     color:#0065FC;
@@ -125,6 +125,10 @@
     color: white;
     cursor: pointer;
     border-radius: 0 10px 10px 0;
+    font-weight: bold;
+}
+.buttonSearch i {
+    visibility: hidden;
 }
 .buttonSearch:hover {
     color:#0065FC;
@@ -132,8 +136,8 @@
 }
 /* Filtres*/
 .FiltreMarg {
-    margin-top: 50px;
-    margin-bottom: 40px;
+    margin-top: 25px;
+    margin-bottom: 20px;
 }
 .filtre {
     display: flex;
@@ -161,6 +165,7 @@
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 0 25px 25px 0;
+    font-weight: bold;
 }
 .filtreIcons {
     margin-left: -2px;
@@ -175,6 +180,7 @@
 .info {
     display: flex;
     align-items: center;
+    margin-bottom: 20px;
 }
 .parentIcon {
     width: 20px;
@@ -226,13 +232,12 @@
     margin-left: 20px;
     border-radius: 10px;
 }
-.imgHérbergement1 {
-    background-size: cover;
-    background-position: center;
+.imgHérbergement {
     width: 100%;
     height: 120px;
     border-radius: 15px 15px 0 0;
 }
+/* 
 .imgHérbergement2 {
     width: 100%;
     height: 120px;
@@ -258,6 +263,8 @@
     height: 120px;
     border-radius: 15px 15px 0 0;
 }
+*/
+
 
 /* Populaire*/
 .blocPopulaire {
@@ -392,7 +399,8 @@ transform: scale(1.03);
 .divfootLien {
     height: 30px;
 }
-/*responsive*/
+/* mode responsive*/
+
 @media screen and (max-width: 1295px) {
     .sizelien1_2 {
         margin-left: 35%;
@@ -413,27 +421,7 @@ transform: scale(1.03);
     }
 }
 @media screen and (max-width: 990px) {
-    .buttonSearch {
-        height: 50px;
-        width: 50px;
-        color: white;
-        cursor: pointer;
-        border-radius: 10px 10px 10px 10px;
-        
-    }
-    .bordureSearch {
-        width: 300px;
-        border-radius: 10px;
-        border: 0.5px solid #F2F2F2;
-    }
-    .recherche {
-        height: 50px;
-        width: 200px;
-        font-size: 18px;
-        color: black;
-        font-weight: bold;
-        
-    }
+   
     .mobileFiltreWrap {
     flex-direction: column;
     align-items: flex-start;
@@ -458,20 +446,38 @@ transform: scale(1.03);
         margin-top: 50px;
         padding: 5%;
     } 
-    
-    
+
 }
 
 @media screen and (max-width:770px) {
-    .sizeliens {
+
+.sizeliens {
         width: 90%;
     }
 .sizelien1_2 {
     margin-left: 20%;
 }   
+.buttonSearch {
+    height: 50px;
+    width: 50px;
+    color: white;
+    cursor: pointer;
+    border-radius: 10px 10px 10px 10px;    
+}
+.bordureSearch {
+    width: 300px;
+    border-radius: 10px;
+    border: 0.5px solid #F2F2F2;
+}
+.recherche {
+    height: 50px;
+    width: 200px;
+    font-size: 18px;
+    color: black;
+    font-weight: bold;  
+}
 .blocHérbergements {
     height: auto;
-
 }
 .bloc1 {
     flex-direction: column;
