--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,46 @@ margin-bottom: 50px;
     width: 23%;
     height: 600px;
 }
+
+.imgActivitesG {
+    width: 100%;
+    height: 530px;
+    border-radius: 15px 15px 0 0 ;
+}
+.imgActivitesM {
+    width: 100%;
+    height: 250px;
+    border-radius: 15px 15px 0 0 ;
+}
+.imgActivitesP {
+    width: 100%;
+    height: 150px;
+    border-radius: 15px 15px 0 0 ;
+}
+.imgActivitesG {
+    width: 100%;
+    height: 530px;
+    border-radius: 15px 15px 0 0 ;
+}
+.imgActivitesM {
+    width: 100%;
+    height: 250px;
+    border-radius: 15px 15px 0 0 ;
+}
+.imgActivitesP {
+    width: 100%;
+    height: 150px;
+    border-radius: 15px 15px 0 0 ;
+}
+/*reglage de bloc*/
+
+.titreActivites {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 5%;
+    width: 95%;
+}
 /* reglage bloc*/
 .cubeActivites {
 width: 23%;
@@ -294,52 +334,14 @@ box-shadow: 5px 5px 5px 1px #DEEBFF;
     width: 100%;
     border-radius: 15px;
     box-shadow: 5px 5px 5px 1px #DEEBFF;
+    
     }
 .cubeActivites2_3_5_6:hover {
 cursor: pointer;
 transform: scale(1.03);
 }
-/*reglage de bloc*/
-.hauterTitre {
-    height: 70px;
-}
-.titreActivites {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding-left: 5%;
-    width: 95%;
-}
-.imgActivites1 {
-    width: 100%;
-    height: 530px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivites2 {
-    width: 100%;
-    height: 250px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivites3 {
-    width: 100%;
-    height: 150px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivites4 {
-    width: 100%;
-    height: 530px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivites5 {
-    width: 100%;
-    height: 250px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivites6 {
-    width: 100%;
-    height: 150px;
-    border-radius: 15px 15px 0 0 ;
-}
+
+
 /* FOOTER*/
 .footer {
     height: 300px;
@@ -455,7 +457,7 @@ margin-top: 0;
 .cubeActivites2_3_5_6 {
     margin-bottom: 50px;
 }
-.imgActivites {
+.imgActivitesG, .imgActivitesM, .imgActivitesP {
     height: 200px;
 }
 .footer {
@@ -493,20 +495,7 @@ margin-top: 0;
     border-top: 0;
     border-bottom: 5px solid #0065FC;
 }
-/*
-.bordureSearch {
-    width: auto;
-    border: none;
-}
-.recherche {
-    width: 200px;
-    border: 1px solid #F2F2F2;
-}
-.buttonSearch {
-    width: 50px;
-    border-radius: 15px;
-}
-*/
+
 .bordureSearch {
     width: 300px;
     border-radius: 10px;
@@ -519,8 +508,7 @@ margin-top: 0;
 .buttonSearch {
     height: 50px;
     width: 50px;
-    border-radius: 10px;
-     
+    border-radius: 10px;  
 }
 .buttonSearch i {
     visibility: visible;
