--- a/styles.css
+++ b/styles.css
@@ -298,21 +298,7 @@ margin-bottom: 50px;
     height: 150px;
     border-radius: 15px 15px 0 0 ;
 }
-.imgActivitesG {
-    width: 100%;
-    height: 530px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivitesM {
-    width: 100%;
-    height: 250px;
-    border-radius: 15px 15px 0 0 ;
-}
-.imgActivitesP {
-    width: 100%;
-    height: 150px;
-    border-radius: 15px 15px 0 0 ;
-}
+
 /*reglage de bloc*/
 
 .titreActivites {
@@ -335,9 +321,8 @@ box-shadow: 5px 5px 5px 1px #DEEBFF;
 .cubeActivites2_3_5_6 {
     width: 100%;
     border-radius: 15px;
-    box-shadow: 5px 5px 5px 1px #DEEBFF;
-    
-    }
+    box-shadow: 5px 5px 5px 1px #DEEBFF; 
+}
 .cubeActivites2_3_5_6:hover {
 cursor: pointer;
 transform: scale(1.03);
@@ -445,7 +430,7 @@ transform: scale(1.03);
    
    .sizeliens {
            width: 90%;
-       }
+    }
    .sizelien1_2 {
        margin-left: 20%;
    }   
@@ -458,8 +443,8 @@ transform: scale(1.03);
        margin-bottom: 0;
    }
    .bloc2 {
-   flex-direction: column;
-   margin-top: 0;
+      flex-direction: column;
+      margin-top: 0;
    }
    .cubeHérbergement {
        width: 100%;
@@ -472,38 +457,24 @@ transform: scale(1.03);
    .blocHérbergements {
        background-color: white;
       }
-   .blocActivites {
-       flex-direction: column;
-       height: auto;
-   }
-   .cubeActivites {
-   
-       margin-bottom: 50px;
-   }
-   .blocActivites2_3_5_6 {
-       width: auto;
-       height: auto;
-   }
-   .cubeActivites2_3_5_6 {
-       margin-bottom: 50px;
-   }
-   .imgActivitesG, .imgActivitesM, .imgActivitesP {
-       height: 180px;
-   }
-   .margMobileActivités {
-       margin-left: 5%;
-   }
-   
-   .cubeActivites {
-       width: 100%;
-       border-radius: 15px;
-       box-shadow: 5px 5px 5px 1px #DEEBFF;
-   }
-   .cubeActivites2_3_5_6 {
-       width: 100%;
-       border-radius: 15px;
-       box-shadow: 5px 5px 5px 1px #DEEBFF;      
-   }
+    .blocActivites {
+        flex-direction: column;
+        height: auto;
+    }
+    .cubeActivites {
+        width: 100%;
+        margin-bottom: 50px;
+    }
+    .blocActivites2_3_5_6 {
+        width: 100%;
+        height: auto;
+    }
+  .cubeActivites2_3_5_6 {
+      margin-bottom: 50px;
+  }
+  .imgActivitesG, .imgActivitesM, .imgActivitesP {
+      height: 200px;
+  }
    .footer {
        height: auto;
        flex-direction: column;
@@ -513,8 +484,7 @@ transform: scale(1.03);
    .margFootBloc1 {
        margin-left: 0%;
    }
-   
-   
+    
    }
    
 
@@ -594,18 +564,43 @@ width: 100%;
 
 .blocPopulaire {
     border-radius: 0;
+  padding-left: 22%;
+   
+}
+.sizePopulaire {
+    width: 100%;
+    margin-left: 5px;
+    padding-right: 50px;
+    
+}
+.margMobileHérbergement {
+    margin-left: 15px;
 }
 .cubeHérbergement {
- box-shadow: 5px 5px 5px 1px #F2F2F2;
+ box-shadow: 3px 3px 3px 3px #F2F2F2;
+ margin-left: 30px;
+ 
 }
-
+.cubeDetailsHérbegerment {
+    margin-left: 10px;
+}
 .cubeActivites {
-margin-left: 7%;
-width: auto;
+    margin-left: 8%;
+    width: 100%;
 }
 .cubeActivites2_3_5_6 {
-margin-left: 5%;
-width: auto;
+    margin-left: 5%;
+    width: 100%;
+}
+.tabletteSizeTitrePop {
+    margin-left: 20px;
+}
+
+.footer {
+    width: 100%;
+    padding-right: 50px;
+    padding-top: 30px;
+    
 }
 
 }
