--- a/styles.css
+++ b/styles.css
@@ -275,6 +275,7 @@
 margin-top: 50px;
 margin-bottom: 50px;
 }
+/*reglage en hauter*/
 .blocActivites {
     width: 100%;
     height: 500px;
@@ -283,6 +284,12 @@ margin-bottom: 50px;
     width: 23%;
     height: 500px;
     
+}
+.blocActivites5_6 {
+    width: 23%;
+    height: 500%;
+    
+
 }
 .imgActivitesG {
     width: 100%;
