réglage de footer

--- a/styles.css
+++ b/styles.css
@@ -699,9 +699,11 @@ padding-right: 50px;
 
 .footer {
     width: 100%;
-    padding-right: 50px;
+    padding-left: 40px;
     padding-top: 30px;
-    margin-top: 30px;   
+    margin-top: 0px; 
+    margin-top: 0px;
+    
 }
 
 }
