rajoute un div pour afficher plus en mobile

--- a/styles.css
+++ b/styles.css
@@ -650,6 +650,9 @@ padding-right: 50px;
     margin-left: 10px;
     
 }
+.margAfficher {
+    margin-left: 20px;
+}
 .blocPopulaire1_2 {
     margin-bottom: 10px;
 }
