--- a/styles.css
+++ b/styles.css
@@ -538,11 +538,11 @@ transform: scale(1.03);
    }
  }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 375px) {
 html, body {
-margin: 10px;
+margin: 0;
 padding: 0;
-width: 420px;
+width: 400px;
 height: auto;
 }
 .section {
@@ -591,7 +591,7 @@ height: auto;
     border-top: 0; */
 } 
 .sizeLiens {
-    width: 100%;
+    width: 420px;
     flex-direction: row;
     flex-wrap: wrap;
     padding-top: 20px;
@@ -627,20 +627,25 @@ height: auto;
 .sizeHérbergements {
 margin-top: 10px;
 padding-right: 50px;
+
+}
+.imgHérbergement {
+width: 365px;
 }
 
 .blocHérbergements {
  background-color: white;
 
 }
-.margMobileHérbergement {
+/* .margMobileHérbergement {
     margin-left: 15px;
    
-}
+} */
 .cubeHérbergement {
  box-shadow: 3px 3px 3px 3px #F2F2F2;
- margin-left: 20px;
- margin-right: 10px;
+ margin-left: 25px;
+ padding-left: 00px;
+ margin-right: 0px;
  margin-bottom: 20px;
  width: 365px;
  height: 200px;
@@ -659,15 +664,18 @@ padding-right: 50px;
 
 .blocPopulaire {
   border-radius: 0;
- 
-   
 }
+
+.cubePopulaire {
+width: 365px;
+}
+
 .sizePopulaire {
     height: auto;
-    width: 375px;
+    width: 380px;
     margin-left: 0px;
     padding-left: 30px;
-    margin-right: 10px;
+    margin-right: 0px;
      
 }
 .TitrePop {
@@ -690,7 +698,7 @@ padding-right: 50px;
     width: 365px;
 }
 .cubeActivites {
-    margin-left: 0%;
+    margin-left: 15px;
     width: 365px;
     margin-bottom: 25px;
 }
