--- a/styles.css
+++ b/styles.css
@@ -284,9 +284,9 @@ nav, header, section {
 }
 /**/
 .blocPopulaire1_2 {
-    width: 365px;
+    width: 360px;
     height: 120px;
-    margin-bottom: 15px;  
+    margin-bottom: 20px;  
     
 }
 .cubePopulaire {
@@ -306,7 +306,7 @@ nav, header, section {
 }
 .imgPopulaire {
     width: 40%;
-    height: 150px;
+    height: 140px;
     border-radius: 15px 0 0 15px;
 }
 .TitrePop {
@@ -379,7 +379,7 @@ transform: scale(1.03);
 /* FOOTER*/
 .footer {
     height: 300px;
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -400,11 +400,14 @@ transform: scale(1.03);
     height: 30px;
 }
 
-/* MODE RESPONSIVE */
+/*MODE RESPONSIVE */
 
-@media screen and (max-width: 1295px) {
+@media screen and (max-width: 1024px) {
     .sizelien1_2 {
         margin-left: 35%;
+    }
+    .sizeLiens {
+        width: 800px;
     }
     .cubeDetailsHérbegerment {
         min-height: 120px;
@@ -421,11 +424,20 @@ transform: scale(1.03);
         margin-top: 0%;
     }
 }
+
 @media screen and (max-width: 990px) {
+
+    /*  .sizelien1_2 {
+        margin-left: 35%;
+    } */
+    .sizeLiens {
+        width: 700px;
+    }
+    
    /*  .sizelienMobile {
         width: 60%;  
-    }
-    */
+    } */
+   
     .mobileFiltreWrap {
     flex-direction: column;
     align-items: flex-start;
@@ -451,8 +463,8 @@ transform: scale(1.03);
         padding: 5%;
     } 
 }
-
-@media screen and (max-width:770px) {
+/* MODE RESPONSIVE TABLETTE*/
+@media screen and (max-width:770px) and (min-width:375px) {
     html, body {
        margin: 0;
        padding: 0;
@@ -479,12 +491,20 @@ transform: scale(1.03);
    .sizeLien {
        height: 80px;
    }
-   .sizeLiens {
+   /* .sizeLiens {
            width: 90%;
-    }
+    } */
    .sizeLien1_2 {
        margin-left: 20%;
-   }   
+   } 
+   .TitrePop {
+       margin-left: 40px;
+   }  
+   .cubePopulaire {
+    width: 600px;
+    padding-left: 0;
+    margin-left: 35px;
+    }
    
    .blocHérbergements {
        height: auto;
@@ -498,7 +518,7 @@ transform: scale(1.03);
       margin-top: 0;
    }
    .cubeHérbergement {
-       width: 100%;
+       width: 600px;
        margin-bottom: 50px;
        box-shadow: 5px 5px 5px 1px #F2F2F2;
    }
@@ -508,16 +528,26 @@ transform: scale(1.03);
    .blocHérbergements {
        background-color: white;
       }
+    .margMobileHérbergement {
+        margin-left: 40px;
+    }
+    .margAfficher {
+        margin-left: 40px;
+    }
+    .Activites {
+        margin-top: 0;
+    }
+
     .blocActivites {
         flex-direction: column;
         height: auto;   
     }
     .cubeActivites {
-        width: 100%;
+        width: 600px;
         margin-bottom: 50px;
     }
     .blocActivites2_3_5_6 {
-        width: 100%;
+        width: 600px;
         height: auto;
         
     }
@@ -527,17 +557,24 @@ transform: scale(1.03);
   .imgActivitesG, .imgActivitesM, .imgActivitesP {
       height: 200px;
   }
+  .margMobileActivités {
+      margin-left: 70px;
+  }
    .footer {
        height: auto;
        flex-direction: column;
        align-items: flex-start;
-       padding-left: 20px;
+       padding-left: 40px;
+        padding-top: 30px;
+        margin-top: 0px;  
+    
    }
    .margFootBloc1 {
        margin-left: 0%;
    }
  }
 
+/*MODE RESPONSIVE MOBILE*/
 @media screen and (max-width: 375px) {
 html, body {
 margin: 0;
