--- a/styles.css
+++ b/styles.css
@@ -4,132 +4,132 @@
     /* margin: 1%; */
     margin: auto;
     max-width: 1440px;
-}
-/**/
-nav, header, section {
+  }
+  /**/
+  nav, section {
     width: 95%;
     margin: 2%;
-}
-.flexCentre {
+  }
+  .flexCentre {
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.flexAround {
+  }
+  .flexAround {
     display: flex;
     justify-content:space-around;
     align-items: center;
-}
-.flexBetween {
+  }
+  .flexBetween {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.flexColumnCentre {
+  }
+  .flexColumnCentre {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.flexColumnAround {
+  }
+  .flexColumnAround {
     display: flex;
     flex-direction: column;
     justify-content:space-around;
-}
-.flexColumnBetween {
+  }
+  .flexColumnBetween {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-}
-.decorationNone {
+  }
+  .decorationNone {
     text-decoration: none;
-}
-.bordureNone {
+  }
+  .bordureNone {
     border: none;
-}
-.texteGras {
+  }
+  .texteGras {
     font-weight: bolder;
-}
-.colorBleu {
+  }
+  .colorBleu {
     color:#0065FC;
-}
-.colorBleuClair {
+  }
+  .colorBleuClair {
    color: #DEEBFF; 
-}
-.colorGris {
+  }
+  .colorGris {
     color:#F2F2F2;
-}
-.backBleu {
+  }
+  .backBleu {
     background-color:#0065FC;
-}
-.backBleuClair {
+  }
+  .backBleuClair {
    background-color: #DEEBFF; 
-}
-.backGris {
+  }
+  .backGris {
     background-color:#F2F2F2;
-}
-
-/* NAV*/
-.sizeNav {
+  }
+  
+  /* NAV*/
+  .sizeNav {
     height: auto;
-}
-
-.sizeLiens {
+  }
+  
+  .sizeLiens {
     width: 100%;
-}
-.sizeLien1_2 {
-    margin-left: 60%;
-}
-.sizeLien {
+  }
+  .sizeLien1_2 {
+    margin-left: 50%;
+  }
+  .sizeLien {
     width: 140px;
     height: 99px;
-}
-.colorLien2 {
+  }
+  .colorLien2 {
     color: black;
-}
-.bordureNav {
+  }
+  .bordureNav {
     border-top: 1px solid transparent;
-}
-.bordureNav:hover {
+  }
+  .bordureNav:hover {
     border-top: 1px solid #0065FC;
     cursor: pointer;
-}
-.bordureNav:hover > a{
+  }
+  .bordureNav:hover > a{
    color: #0065FC;
-}
-.margLogo {
+  }
+  .margLogo {
     margin-bottom: 7px;
-}
-.margImgLogo {
+  }
+  .margImgLogo {
     width: 120px;
     height: 50px;
-}
-
-/* HEADER*/
-.desktopMode {
+  }
+  
+  /* HEADER*/
+  .desktopMode {
     visibility: hidden;
-}
-.bordureSearch {
+  }
+  .bordureSearch {
     width: 400px;
     border-radius: 10px;
     border: 0.5px solid #F2F2F2;
-}
-.paddingSearch {
+  }
+  .paddingSearch {
     padding-left: 20px;
-}
-.recherche {
+  }
+  .recherche {
     height: 50px;
     width: 230px;
     font-size: 18px;
     color: black;
     font-weight: bold;
-}
-.iconSize {
+  }
+  .iconSize {
     height: 50px;
     width: 50px;
     border-radius: 10px 0 0 10px;
-}
-.buttonSearch {
+  }
+  .buttonSearch {
     height: 50px;
     width: 120px;
     color: white;
@@ -137,272 +137,272 @@ nav, header, section {
     border-radius: 0 10px 10px 0;
     font-weight: bold;
     border: none;
-}
-.buttonSearch:hover {
+  }
+  .buttonSearch:hover {
     color:#0065FC;
     background-color: #F2F2F2;
-}
-/* Filtres*/
-.FiltreMarg {
+  }
+  /* Filtres*/
+  .FiltreMarg {
     margin-top: 25px;
     margin-bottom: 20px;
-}
-.filtre {
+  }
+  .filtre {
     display: flex;
     align-items: center;
-}
-.FiltreTitreMarg {
+  }
+  .FiltreTitreMarg {
     margin-right: 20px;
-}
-
-.filtreIconsTexte {
+  }
+  
+  .filtreIconsTexte {
     border: 2px solid #F2F2F2;
     height: 50px;
     border-radius: 30px;
     margin-right: 20px;
-}
-.filtreIconsTexte:hover > .filtreTexte {
+  }
+  .filtreIconsTexte:hover > .filtreTexte {
     color: #0065FC;
-}
-.filtreIconsTexte:hover > .filtreIcons {
- color: white;
- background-color:#0065FC;
-}
-.filtreTexte {
+  }
+  .filtreIconsTexte:hover > .filtreIcons {
+  color: white;
+  background-color:#0065FC;
+  }
+  .filtreTexte {
     height: 50px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 0 25px 25px 0;
     font-weight: bold;
-}
-.filtreIcons {
+  }
+  .filtreIcons {
     margin-left: -2px;
     border-radius: 25px;
     width: 52px;
     height: 52px;
     color: #0065FC;
     background-color: #DEEBFF;
-}
-
-/* info*/
-.info {
+  }
+  
+  /* info*/
+  .info {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-}
-.parentIcon {
+  }
+  .parentIcon {
     width: 20px;
     height: 20px;
     border: 2px solid #F2F2F2;
     border-radius: 25px;
     margin-right: 5px;
-}
-/* HÉRBERGEMENTS*/
-/**/
-/* #hérbergements {
+  }
+  /* HÉRBERGEMENTS*/
+  /**/
+  /* #hérbergements {
     max-width: 1440px;
     max-height: 640px;
-} */
-.sizeHérbergements {
+  } */
+  .sizeHérbergements {
     flex: 2.5;
     height: 600px;
     margin-right: 20px;
     border-radius: 10px;
-}
-.blocHérbergements {
+  }
+  .blocHérbergements {
     padding-left: 20px;
     padding-right: 20px;
-}
-.bloc1 {
+  }
+  .bloc1 {
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.bloc2 {
+  }
+  .bloc2 {
     margin-top: 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.cubeDetailsHérbegerment {
+  }
+  .cubeDetailsHérbegerment {
     width: 90%;
     
-}
-.margTexteHérbegement {
+  }
+  .margTexteHérbegement {
     line-height: 2px;
     padding-left: 5px;
     width: max-content;
    
-}
-.cubeHérbergement {
+  }
+  .cubeHérbergement {
     width: 30%;
     height: 200px;
     background-color: white;
     padding: 1%;
     border-radius: 20px;
-}
-.cubeHérbergement:hover {
+  }
+  .cubeHérbergement:hover {
     cursor: pointer;
     transform: scale(1.1);
-}
-
-.imgHérbergement {
+  }
+  
+  .imgHérbergement {
     width: 100%;
     height: 120px;
     border-radius: 15px 15px 0 0;
-}
-.texteHerbergement {
+  }
+  .texteHerbergement {
    height: auto;
    width: auto;
     
-}
-
-/* Populaire*/
-.sizePopulaire {
+  }
+  
+  /* Populaire*/
+  .sizePopulaire {
     flex: 1;
     height: 600px;
     margin-left: 10px;
     border-radius: 10px;
-}
-.margTextePop{
+  }
+  .margTextePop{
     padding-bottom: 0px;
-}
-.margTextePop h4 {
+  }
+  .margTextePop h4 {
     width: 150px;
     height: 40px;
     margin-top: 5px;
     margin-bottom: 5px;
-}
-.margTextePop p {
+  }
+  .margTextePop p {
     margin-top: 5px;
-}
-
-.blocPopulaire {
+  }
+  
+  .blocPopulaire {
     padding-left: 20px;
     padding-right: 20px;
-}
-/**/
-.blocPopulaire1_2 {
+  }
+  /**/
+  .blocPopulaire1_2 {
     width: 360px;
     height: 120px;
     margin-bottom: 20px;  
     
-}
-.cubePopulaire {
+  }
+  .cubePopulaire {
     background-color: white;
     height: auto;
     padding: 1% 0 1% 1%;
     border-radius: 20px;
-}
-
-.cubePopulaire:hover {
+  }
+  
+  .cubePopulaire:hover {
    cursor: pointer;
    transform: scale(1.05);
-}
-.cubeDetailsPopulaire {
+  }
+  .cubeDetailsPopulaire {
     width: 60%;
     padding-left: 5%;  
-}
-.imgPopulaire {
+  }
+  .imgPopulaire {
     width: 40%;
     height: 140px;
     border-radius: 15px 0 0 15px;
-}
-.TitrePop {
+  }
+  .TitrePop {
     padding-top: 20px;
-}
-
-
-/* Activities*/
-.Activites {
-margin-top: 50px;
-margin-bottom: 50px;
-}
-/*reglage en hauter*/
-.blocActivites {
+  }
+  
+  
+  /* Activities*/
+  .Activites {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  }
+  /*reglage en hauter*/
+  .blocActivites {
     width: 100%;
     height: 400px;
-}
-.blocActivites2_3_5_6 {
+  }
+  .blocActivites2_3_5_6 {
     width: 23%;
     height: 400px;
     
-}
-.imgActivitesG {
+  }
+  .imgActivitesG {
     width: 100%;
     height: 330px;
     border-radius: 15px 15px 0 0 ;
-}
-.imgActivitesM {
+  }
+  .imgActivitesM {
     width: 100%;
     height: 150px;
     border-radius: 15px 15px 0 0 ;
     
-}
-.imgActivitesP {
+  }
+  .imgActivitesP {
     width: 100%;
     height: 100px;
     border-radius: 15px 15px 0 0 ;
-}
-
-/*reglage de bloc*/
-
-.titreActivites {
+  }
+  
+  /*reglage de bloc*/
+  
+  .titreActivites {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding-left: 5%;
     width: 95%;
-}
-/* reglage bloc*/
-.cubeActivites {
-width: 23%;
-border-radius: 15px;
-box-shadow: 5px 5px 5px 1px #DEEBFF;
-}
-.cubeActivites:hover {
+  }
+  /* reglage bloc*/
+  .cubeActivites {
+  width: 23%;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px 1px #DEEBFF;
+  }
+  .cubeActivites:hover {
    cursor: pointer;
    transform: scale(1.03);
-}    
-.cubeActivites2_3_5_6 {
+  }    
+  .cubeActivites2_3_5_6 {
     width: 100%;
     border-radius: 15px;
     box-shadow: 5px 5px 5px 1px #DEEBFF; 
-}
-.cubeActivites2_3_5_6:hover {
-cursor: pointer;
-transform: scale(1.03);
-}
-
-
-/* FOOTER*/
-.footer {
+  }
+  .cubeActivites2_3_5_6:hover {
+  cursor: pointer;
+  transform: scale(1.03);
+  }
+  
+  
+  /* FOOTER*/
+  .footer {
     height: 300px;
     margin-top: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-.footerBlocTaille {
+  }
+  .footerBlocTaille {
     height: 150px;
-}
-.margFootBloc1 {
+  }
+  .margFootBloc1 {
     margin-left: 5%;
-}
-.margFootBloc3 {
+  }
+  .margFootBloc3 {
     margin-right: 25%;
-}
-.footLien {
+  }
+  .footLien {
     color: black;
-}
-.divfootLien {
+  }
+  .divfootLien {
     height: 30px;
-}
-
-/*MODE RESPONSIVE */
-
-@media screen and (max-width: 1024px) {
+  }
+  
+  /*MODE RESPONSIVE */
+  
+  @media screen and (max-width: 1024px) {
     .sizelien1_2 {
         margin-left: 35%;
     }
@@ -423,11 +423,12 @@ transform: scale(1.03);
     .TitrePop {
         margin-top: 0%;
     }
-}
-
-@media screen and (max-width: 990px) {
-
-    /*  .sizelien1_2 {
+    
+  }
+  
+  @media screen and (max-width: 990px) {
+  
+     /* .sizelien1_2 {
         margin-left: 35%;
     } */
     .sizeLiens {
@@ -462,9 +463,9 @@ transform: scale(1.03);
         margin-top: 50px;
         padding: 5%;
     } 
-}
-/* MODE RESPONSIVE TABLETTE*/
-@media screen and (max-width:770px) and (min-width:375px) {
+  }
+  /* MODE RESPONSIVE TABLETTE*/
+  @media screen and (max-width:768px) and (min-width:375px) {
     html, body {
        margin: 0;
        padding: 0;
@@ -482,9 +483,10 @@ transform: scale(1.03);
    .info {
        margin-left: 5%;
    }
-   .parentIcon {
+   /**/
+   /* .parentIcon {
        margin-bottom: 5%;
-   }
+   } */
    .bordureSearch {
        margin-left: 5%;
    }
@@ -499,12 +501,23 @@ transform: scale(1.03);
    } 
    .TitrePop {
        margin-left: 40px;
+       width: 700px;
    }  
+   .sizePopulaire {
+    height: auto;
+    width: 768px;
+    
+  }
    .cubePopulaire {
-    width: 600px;
-    padding-left: 0;
+    width: 700px;
+    padding-left: 0px;
     margin-left: 35px;
     }
+    .sizeHérbergements {
+        margin-top: 10px;
+        width: 768px;
+        
+     }
    
    .blocHérbergements {
        height: auto;
@@ -518,7 +531,7 @@ transform: scale(1.03);
       margin-top: 0;
    }
    .cubeHérbergement {
-       width: 600px;
+       width: 700px;
        margin-bottom: 50px;
        box-shadow: 5px 5px 5px 1px #F2F2F2;
    }
@@ -536,29 +549,32 @@ transform: scale(1.03);
     }
     .Activites {
         margin-top: 0;
+        width: 768px;
     }
-
+  
     .blocActivites {
         flex-direction: column;
         height: auto;   
     }
     .cubeActivites {
-        width: 600px;
+        width: 700px;
         margin-bottom: 50px;
+        margin-left: 20px;
     }
     .blocActivites2_3_5_6 {
-        width: 600px;
+        width: 700px;
         height: auto;
         
     }
   .cubeActivites2_3_5_6 {
       margin-bottom: 50px;
+      margin-left: 20px;
   }
   .imgActivitesG, .imgActivitesM, .imgActivitesP {
       height: 200px;
   }
   .margMobileActivités {
-      margin-left: 70px;
+      margin-left: 40px;
   }
    .footer {
        height: auto;
@@ -567,58 +583,51 @@ transform: scale(1.03);
        padding-left: 40px;
         padding-top: 30px;
         margin-top: 0px;  
-    
+        width: 768px;
+        
    }
    .margFootBloc1 {
        margin-left: 0%;
    }
- }
-
-/*MODE RESPONSIVE MOBILE*/
-@media screen and (max-width: 375px) {
-html, body {
-margin: 0;
-padding: 0;
-width: 400px;
-height: auto;
-}
-.section {
-    margin: 0px;
-}
-.margImgLogo {
+  }
+  
+  /*MODE RESPONSIVE MOBILE*/
+  @media screen and (max-width: 375px) {
+  html, body {
+  margin: 0;
+  padding: 0;
+  width: auto;
+  height: auto;
+  }
+  .margImgLogo {
     width: 100px;
     height: 30px;
-}
-
-.FiltreMarg {
-    padding-left: 0px;
-}
-.margMobileNav {
-    padding-left: 10px;
-}
-.margLogo {
+  }
+  
+  .FiltreMarg {
+    margin-left:  5px;
+  }
+  .margMobileNav {
+    margin-left: 5px;
+  }
+  .margLogo {
     padding-left: 5%;
-}
-.info {
-    margin-left: 0px;
-}
-.parentIcon {
+  }
+  .info {
+    margin-left: 20px;
+  }
+  .parentIcon {
     margin-bottom: 5%;
-}
-.margMobileActivités {
-    padding-left: 7%;
-}
-.sizeLien {
+  }
+  .sizeLien {
     flex-direction: row;
-}
-
-.sizeLien1_2 {
+  }
+  .sizeLien1_2 {
     order: 1;
     width: 100%;
     margin-left: 0; 
-}
-/**/
-.sizelienMobile {
+  }
+  .sizelienMobile {
    /*  width: 50%;
     border-top: none;
     border-bottom: 5px solid #F2F2F2;   */
@@ -626,133 +635,157 @@ height: auto;
     width: 50%;
     /* width: 50px;
     border-top: 0; */
-} 
-.sizeLiens {
+  } 
+  .sizeLiens {
     width: 420px;
     flex-direction: row;
     flex-wrap: wrap;
     padding-top: 20px;
-}
-.sizelienMobile:hover {
+  }
+  .sizelienMobile:hover {
     border-top: 0;
     border-bottom: 5px solid #0065FC;
-}
-
-.bordureSearch {
+  }
+  
+  .bordureSearch {
     width: 350px;
     border-radius: 10px;
     border: 0.5px solid #F2F2F2;
-    margin-left: 0px;
-
-}
-.recherche {
+    margin-left: 20px;
+    margin-top: 30px;
+  
+  }
+  .recherche {
     height: 50px;
     width: 250px;
     
-}
-.buttonSearch {
+  }
+  .buttonSearch {
     height: 50px;
     width: 50px;
     border-radius: 15px;  
-}
-.buttonSearch i {
+  }
+  .buttonSearch i {
     visibility: visible;
-}
-.mobileMode {
+  }
+  .mobileMode {
     display: none;
-}
-.sizeHérbergements {
-margin-top: 10px;
-padding-right: 50px;
-
-}
-.imgHérbergement {
-width: 365px;
-}
-
-.blocHérbergements {
- background-color: white;
-
-}
-/* .margMobileHérbergement {
+  }
+  .imgPopulaire {
+    width: 40%;
+    height: 140px;
+    border-radius: 20px 0 0 20px;
+    padding: 5px;
+  }
+  .blocPopulaire1_2 {
+    margin-bottom: 10px;
+    margin-left: 15px;
+    
+  }
+  .blocPopulaire {
+  border-radius: 0;
+  
+  }
+  .cubePopulaire {
+  width: 350px;
+  height: 140px;
+  }
+  
+  .sizePopulaire {
+    height: auto;
+    width: 100%;
+    margin-left: 15px;
+    padding-right: 20px;
+     
+  }
+  .TitrePop {
+    /* margin-left: 30px;
+    padding-top: 15px; */
+    padding-left: 20px;
+    margin-left: 10px;
+    width: 330px;
+  }
+  .sizeHérbergements {
+  margin-top: 10px;
+  padding-right: 50px;
+  width: 100%;
+  margin-left: 35px;
+  
+  }
+  .imgHérbergement {
+  width: 350px;
+  border-radius: 20px 20px 0 0;
+  }
+  
+  .blocHérbergements {
+  background-color: white;
+  
+  }
+  /* .margMobileHérbergement {
     margin-left: 15px;
    
-} */
-.cubeHérbergement {
- box-shadow: 3px 3px 3px 3px #F2F2F2;
- margin-left: 25px;
- padding-left: 00px;
- margin-right: 0px;
- margin-bottom: 20px;
- width: 365px;
- height: 200px;
- 
-}
-.cubeDetailsHérbegerment {
+  } */
+  .cubeHérbergement {
+  box-shadow: 3px 3px 3px 3px #F2F2F2;
+  margin-left: 25px;
+  padding-left: 00px;
+  margin-right: 0px;
+  margin-bottom: 20px;
+  width: 350px;
+  height: 200px;
+  
+  }
+  .cubeDetailsHérbegerment {
     margin-left: 10px;
     
-}
-.margAfficher {
-    margin-left: 20px;
-}
-.blocPopulaire1_2 {
-    margin-bottom: 10px;
-}
-
-.blocPopulaire {
-  border-radius: 0;
-}
-
-.cubePopulaire {
-width: 365px;
-}
-
-.sizePopulaire {
-    height: auto;
-    width: 380px;
-    margin-left: 0px;
-    padding-left: 30px;
-    margin-right: 0px;
-     
-}
-.TitrePop {
-    margin-left: 20px;
-    padding-top: 15px;
-}
-.Activites {
+  }
+  .margAfficher {
+    margin-left: 40px;
+  }
+  
+  .Activites {
     margin-top:  20px;
-}
-.imgActivitesG {
+    width: 100%;
+  }
+  .blocActivites2_3_5_6 {
+    width: 350px;  
+  }
+  .margMobileActivités {
+    margin-left: 30px;
+  }
+  .imgActivitesG {
     height: 150px;
-    width: 365px;
-}
-.imgActivitesM {
+    width: 100%;
+  }
+  .imgActivitesM {
     height: 150px;
-    width: 365px;
-}
-.imgActivitesP {
+    width: 100%;
+  }
+  .imgActivitesP {
     height: 150px;
-    width: 365px;
-}
-.cubeActivites {
-    margin-left: 15px;
-    width: 365px;
+    width: 100%;
+  }
+  .cubeActivites {
+    width: 350px;
     margin-bottom: 25px;
-}
-.cubeActivites2_3_5_6 {
-    margin-left: 20px;
-    width: 365px;
+    border-radius: 30px;
+    box-shadow: 2px 2px 2px 1px #DEEBFF;
+  }
+  .cubeActivites2_3_5_6 {
+    width: 350px;
     margin-bottom: 25px;
-}
-
-.footer {
+    border-radius: 30px;
+    box-shadow: 2px 2px 2px 1px #DEEBFF;
+  }
+  
+  .footer {
     width: 100%;
     padding-left: 40px;
     padding-top: 30px;
     margin-top: 0px; 
     margin-top: 0px;
     
-}
-
-}
+  }
+  
+  }
    
